# janashakthi_insurance_project

./: .gitignore  README.md  architecture.drawio  pyproject.toml  requirements-api.txt  requirements.txt  run_app.py  test_integration.py
STP_NSTP_Agent/: .gitignore  README.md  app.py  requirements.txt
STP_NSTP_Agent/src/: company_rules_prompt.py  config.py  output_builder.py  schemas.py  sql_retriever.py  stp_nstp_agent.py  utils.py  vector_retriever.py
backend/: main.py  requirements.txt  s3_storage.py
document_verification_agent/: __init__.py  agent.py  llm_comparator.py  ocr_bridge.py
frontend/: form.py
langgraph-doc-scanner/: api.py  app.py  graph.py  main.py  state.py
langgraph-doc-scanner/models/: vlm_client.py
langgraph-doc-scanner/nodes/: classifier.py  paddle_ocr.py  preprocessor.py  validator.py  vlm_extractor.py
ocr_outputs/: extraction_output.json  university_id_result.json
